Fixing issue with nav hover over underline causing a jump when neither nav items is initially selected

--- a/web/src/main/resources/scss/modules/_navbar.scss
+++ b/web/src/main/resources/scss/modules/_navbar.scss
@@ -27,8 +27,9 @@
       @include text($base__font-size--large, $base__line-height--large, $color: $text__colour--theme);
       display: block;
       min-height: $base__line-height--large+px;
-      padding: 10px 10px 10px 52px;
+      padding: 10px 10px 8px 52px;
       background: url(/images/swappr.png) no-repeat top left;
+      border-bottom: 6px solid transparent;
 
       &.sprite-user {
         background-position: 15px -550px;
